<resources>

    <!-- Nome da aplicação (mostrado no launcher e na barra superior) -->
    <string name="app_name">FitTrack</string>

    <!-- Títulos dos ecrãs -->
    <string name="history_title">Ecrã Histórico</string>
    <string name="reps_title">Ecrã Repetições</string>
    <string name="run_title">Ecrã Corrida</string>

    <!-- Texto de botões comuns -->
    <string name="share">Partilhar</string>
    <string name="delete">Remover</string>

    <!-- Texto de instrução no ecrã de repetições -->
    <string name="instruction_choose">
        Por favor escolha o exercício que pretende fazer
    </string>

    <!-- Texto formatado para mostrar o número de repetições -->
    <!-- %1$d será substituído por um número inteiro -->
    <string name="label_reps">Repetições: %1$d</string>

    <!-- Texto formatado para mostrar o tempo -->
    <!-- %1$s será substituído por uma string (ex: 00:01) -->
    <string name="label_time">Tempo: %1$s</string>

    <!-- Texto dos botões -->
    <string name="btn_start">Iniciar</string>
    <string name="btn_stop">Parar</string>

    <!-- Nomes dos exercícios -->
    <string name="ex_pushups">Flexões</string>
    <string name="ex_squats">Agachamentos</string>
    <string name="ex_abs">Abdominais</string>
    <string name="fragmento_1">Fragmento 1</string>
    <string name="fragmento_2">Fragmento 2</string>
    <string name="fragmento_3">Fragmento 3</string>
    <!--  TODO: Remove or change this placeholder text  -->
    <string name="hello_blank_fragment">Ola fragmento</string>
    <string name="placeholder">Olá Mundo\n</string>
    <string name="placeholder_2">Olá mundo do 2</string>
    <string name="placeholder_3">Olá mundo</string>
    <string name="username">Nome de utilizador</string>
    <string name="date_hint">YYYY/MM/DD</string>
    <string name="weight">peso</string>
    <string name="username_register">Nome de utilizador</string>
    <string name="register_btn">Registar</string>
    <string name="password">Palavra passe</string>
    <string name="email">email</string>
    <string name="full_name">Nome Completo</string>
    <string name="register_txt_view">Registar</string>
    <string name="height_hint">Altura</string>
    <string name="login">LOGIN</string>
    <string name="password_hint">Palavra passe</string>
    <string name="login_btn">Login</string>
    <string name="bibliotecas_e_frameworks">Bibliotecas e Frameworks</string>

    <string name="libs_frameworks">
• Android SDK\n
• Kotlin\n
• AndroidX (Room, LiveData, Navigation)\n
• Google Play Services (Location)\n
• Sensores do Android (Accelerometer)\n
• API REST (HTTP / JSON)
</string>


    <string name="project_methodology">
O desenvolvimento da aplicação baseou-se na documentação oficial do Android (developer.android.com), bem como na consulta de vários fóruns técnicos online. Adicionalmente, foi utilizado o ChatGPT como apoio ao esclarecimento de conceitos e à estruturação do código.
</string>
</resources>
